--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -25,68 +25,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import read_data\n",
-    "import ghaussian_method\n",
-    "import numpy as np\n",
-    "import sys"
+    "from ghaussian_method import solve_by_ghaussian_method"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "a = read_data.read_file_matrix(\"example.txt\")"
+    "Чтение из файла"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "array([[ 0. ,  4. ,  5. ,  0. ,  3. ],\n       [ 0. ,  0. ,  4. ,  2. ,  0.5],\n       [-4. , -6. ,  0. ,  1. ,  2. ],\n       [ 1.4, -2. ,  3. ,  0. ,  8.9]])"
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "ghaussian_method.transform_to_triangular_matrix(a, \"column\")"
+    "matrix = read_data.read_file_matrix(\"example.txt\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "237.6"
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "ghaussian_method.comp_determinant(a)"
+    "Чтение с консоли"
    ]
   },
   {
@@ -95,31 +62,71 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": "array([[-4.        , -6.        ,  0.        ,  1.        ,  2.        ],\n       [ 0.        , -4.1       ,  3.        ,  0.35      ,  9.6       ],\n       [ 0.        ,  0.        ,  7.92682927,  0.34146341, 12.36585366],\n       [ 0.        ,  0.        ,  0.        ,  1.82769231, -5.74      ]])"
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "Введите 3 строк по 4 элементов, разделённых пробелом\nНеправильный формат строки, строка должна состоять из 4 элементов, разделенных пробелом\nНеправильный формат строки, строка должна состоять из 4 элементов, разделенных пробелом\nНеправильный формат строки, строка должна состоять из 4 элементов, разделенных пробелом\nНеправильный формат строки, строка должна состоять из 4 элементов, разделенных пробелом\n"
     }
    ],
    "source": [
-    "a"
+    "matrix = read_data.read_console_matrix()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Задать случайные коэффициенты"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "-5.74\n0.0\n1.8276923076923077\n[ 0.          0.          0.         -3.14057239]\n12.365853658536587\n-1.0723905723905724\n7.926829268292684\n[ 0.          0.          1.6952862  -3.14057239]\n9.6\n3.986658249158249\n-4.1\n[ 0.         -1.36910774  1.6952862  -3.14057239]\n2.0\n5.074074074074074\n-4.0\n[ 0.76851852 -1.36910774  1.6952862  -3.14057239]\n"
+     "text": "Введите размер матрицы\nВведите границу\n"
     }
    ],
    "source": [
-    "ghaussian_method.comp_back_substitution(a)"
+    "matrix = read_data.create_random_matrix()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Решение"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "Определитель: 1.4045448161329074e+40\n\nТреугольная матрица:\n[[ 1.20084733e+02  1.05370709e+02  6.87065796e+01  1.03582202e+02\n   9.40321167e+01  8.86238976e+00  8.11649093e+01  1.70285267e+01\n   6.41365760e+01  5.00828304e+00  1.09572889e+02  5.89422428e+01\n   1.19648358e+02  5.87562968e+01  9.03444714e+01  2.09911185e+01\n   9.72432618e+00  7.43402198e+01  2.91913045e+00  1.11834286e+02\n   3.90748930e+01]\n [ 0.00000000e+00  1.02423232e+02  1.09668887e+02  8.89068233e+01\n   1.65932709e+01  7.71352816e+01  3.86369833e+01  4.62100768e+01\n   5.12495637e+01  2.85780517e+01  1.02505879e+02  5.63922940e+01\n   6.77571172e+01  1.02859200e+02  4.91878844e+01  8.93775714e+01\n   1.48900672e+01  1.53398580e+01  3.81784489e+00  3.83744915e+01\n   2.06692740e+00]\n [ 0.00000000e+00  0.00000000e+00  9.66660796e+01  5.04877123e+01\n  -3.59746990e+01  1.12788647e+02  5.87997013e-01  7.19519897e+01\n  -4.17850426e-01  1.08194277e+02  7.30648423e+01  7.37257476e+01\n   2.05170735e+01  1.01112421e+02  3.90897021e+01  3.91340837e+01\n   2.06238515e+01  2.62937676e+01  4.59689791e+01  2.90334913e+00\n   1.11117602e+01]\n [ 0.00000000e+00 -3.55271368e-15  0.00000000e+00 -8.94852588e+01\n  -4.30764838e+01 -5.17091778e+01 -3.98425893e+01  3.02184802e+01\n   3.08841350e+01  8.36363572e+01 -1.08220126e+02  2.86428413e+00\n  -4.72653225e+01 -4.81112166e+01 -1.12888505e+01  5.93612265e+01\n  -5.28639810e+00 -7.55743600e+00 -1.14910407e+01 -4.94423969e+01\n   6.95619882e+01]\n [ 0.00000000e+00  1.50482520e-14  8.88178420e-16  0.00000000e+00\n   1.07702846e+02 -2.67743959e+00  4.99516372e+00 -1.65514798e+01\n  -1.98746234e+01 -4.64399710e+01 -5.96090798e+01  2.16779972e+01\n  -4.29654185e+00 -2.52295445e+01  3.85495250e+01 -2.97573300e+01\n   4.66583263e+00  9.09876664e+01  3.98665803e+00  1.40059602e+01\n   5.01856392e+01]\n [ 0.00000000e+00 -4.76116549e-15 -4.48828830e-16  0.00000000e+00\n  -7.10542736e-15  1.24589570e+02 -2.28002745e+01  6.78778069e+01\n  -6.58599817e+01 -4.93250835e+01  3.17649383e+01 -5.92596949e+00\n   2.11689152e+01  6.09411310e+01  1.21051158e+01  2.23399765e+01\n  -4.75719900e+00 -3.76096290e+01  9.21108328e+01  4.92291399e+01\n   9.80737175e+00]\n [ 0.00000000e+00  9.63979093e-15  6.27579984e-16  0.00000000e+00\n   5.90485088e-15  0.00000000e+00  8.71701659e+01 -5.86057708e+01\n  -3.72437423e+00  1.45690540e+02  2.21002144e+01 -5.65909731e+00\n  -5.92820705e+01 -6.18525360e+01 -1.90453481e+01 -1.73641867e+01\n   7.11991237e+01  1.11895460e+02 -1.19198225e+01 -4.82320972e+01\n   7.50367907e+01]\n [ 0.00000000e+00 -1.43320167e-14 -8.70302913e-16  0.00000000e+00\n  -6.85014283e-15  0.00000000e+00  0.00000000e+00  1.23911092e+02\n  -1.06526971e+01 -3.78536035e+01 -1.24758591e+01 -2.62992138e+01\n  -2.32738608e+01  4.27755918e+01 -5.48877259e+00  7.32182544e+01\n  -1.71300735e+01  4.42224822e-01  6.53294263e+01  2.45905808e+01\n   8.69754524e+01]\n [ 0.00000000e+00 -7.70042091e-15 -3.11250698e-16  0.00000000e+00\n   4.95269118e-15  0.00000000e+00  0.00000000e+00  0.00000000e+00\n   1.67048529e+02  1.12052526e+02  3.49231335e-01  1.11716624e+01\n   8.50311774e+01  3.58858984e+01  1.56413292e+01  1.22877121e+02\n   6.67427467e+01  5.86106273e+01 -5.57573831e+01 -2.66617189e+01\n  -1.26034122e+01]\n [ 0.00000000e+00 -1.42535732e-14 -1.02181985e-15  0.00000000e+00\n  -6.78324432e-15  0.00000000e+00  0.00000000e+00  0.00000000e+00\n   0.00000000e+00 -1.58222035e+02  1.83745640e+01 -3.22197092e+01\n   6.21384530e+01 -4.01472803e+01 -3.16166359e+01  3.26924823e+01\n   2.52602566e+01 -1.86950114e+02  4.71968702e+01  1.38187192e+01\n  -2.48444234e+01]\n [ 0.00000000e+00 -8.46060925e-16 -1.05314928e-16  1.77635684e-15\n  -1.39504101e-14  0.00000000e+00  1.77635684e-15  0.00000000e+00\n   0.00000000e+00  0.00000000e+00  9.22092604e+01 -5.01444342e+00\n  -3.03137063e+01 -8.49096422e+00 -1.74229410e+01  2.40886519e+01\n  -3.08768958e+01 -5.88427194e+01  4.44459828e+01  6.38311167e+01\n  -8.70878734e+01]\n [ 0.00000000e+00 -1.68403989e-15 -1.51637799e-16 -1.03125999e-15\n   1.36655705e-14  0.00000000e+00 -1.91943841e-15  0.00000000e+00\n   0.00000000e+00  0.00000000e+00  0.00000000e+00 -6.88666919e+01\n   2.42996848e+01 -3.01893368e+01 -9.95381515e+01 -2.95753992e+01\n   7.82542078e+01 -4.10003902e+01 -4.52529341e+01 -1.02588208e+02\n  -2.76789107e+01]\n [ 0.00000000e+00 -3.28288113e-15 -2.35391152e-16  1.49623183e-15\n  -2.23887506e-14  3.55271368e-15  2.02636752e-15  0.00000000e+00\n   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n  -6.90999262e+01 -1.27403074e+02  6.61269461e+01  3.49386298e+01\n   4.55868598e+01 -5.13363663e+01  1.65373408e+02  5.92200937e+01\n   8.65136352e+01]\n [ 0.00000000e+00 -9.02244627e-15 -6.14584761e-16 -5.86813609e-15\n  -1.73316594e-14  3.49106353e-15  1.10490041e-15  3.55271368e-15\n   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n   0.00000000e+00 -1.75844731e+02  1.23745650e+01  1.16250353e+02\n   2.35479998e+02 -2.14131066e+02  1.63336173e+02 -2.44720398e+01\n   6.99363439e+01]\n [ 0.00000000e+00  6.40815255e-15 -5.64227117e-16  2.15668087e-15\n   3.70421975e-14 -2.47895349e-15 -3.79265659e-15 -2.69811489e-15\n   0.00000000e+00 -7.10542736e-15  0.00000000e+00  0.00000000e+00\n   0.00000000e+00  0.00000000e+00 -9.87331582e+01 -2.17170794e+02\n   5.22413986e+00  1.03662760e+02 -1.78239561e+02 -8.76641193e+01\n  -2.94162380e+00]\n [ 0.00000000e+00 -3.77908804e-15 -3.29062988e-16  6.58641109e-15\n   6.69152260e-16 -4.08370476e-16 -3.07857605e-16 -3.44381463e-15\n   0.00000000e+00  3.07980869e-17  0.00000000e+00  0.00000000e+00\n   0.00000000e+00  0.00000000e+00  0.00000000e+00 -8.67684253e+01\n  -7.70956710e+01 -4.72986501e+01  1.19494858e+02 -4.40283387e+01\n  -2.31906490e+01]\n [ 0.00000000e+00 -2.13397860e-15 -5.26178983e-17  2.27028940e-15\n  -1.37712518e-14 -8.50642258e-16  1.65333239e-15 -3.77533186e-16\n   0.00000000e+00  7.21807002e-16  0.00000000e+00  0.00000000e+00\n   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n  -9.30677420e+01 -1.30158655e+02  5.51854249e+01  2.39446812e+01\n  -1.55932122e+02]\n [ 0.00000000e+00 -5.42077556e-15 -4.01263316e-16  9.16205557e-15\n  -3.69213509e-15 -2.62289383e-15  5.79415050e-16 -8.17904681e-16\n   0.00000000e+00 -1.40099442e-16  0.00000000e+00  0.00000000e+00\n   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n   0.00000000e+00 -8.60414794e+01  2.25608912e+01 -2.28678009e+00\n  -3.00726725e+01]\n [ 0.00000000e+00  1.55340257e-15  5.88484194e-16  2.57824230e-15\n  -1.10692574e-14  2.08874195e-15  1.04971325e-15 -2.56095610e-15\n   0.00000000e+00 -3.29490654e-15  0.00000000e+00  0.00000000e+00\n   0.00000000e+00 -1.42108547e-14  7.10542736e-15 -7.10542736e-15\n   0.00000000e+00  0.00000000e+00  1.03070840e+02 -1.98719497e+01\n  -2.42075445e+01]\n [ 0.00000000e+00  7.84509503e-15  6.12553193e-16 -1.19239305e-14\n   7.48890014e-15  1.08888416e-15 -3.86770357e-16  2.61192406e-15\n   0.00000000e+00  8.34096949e-16  0.00000000e+00  0.00000000e+00\n   0.00000000e+00 -1.40429759e-14 -8.39393884e-17  8.39393884e-17\n   0.00000000e+00  0.00000000e+00  0.00000000e+00 -6.31638906e+01\n  -1.85747717e+02]]\n\nНеизвестные:\n-5.738563095422911 -0.025022905674188748 3.58349497182491 -5.175821271108364 -0.3536016262891787 -3.568017213995191 1.907058240656733 2.3632907212251633 -2.0925858875095487 1.8506365375847709 0.5447319351083629 -4.4226726237249325 4.671457552511077 0.28015264765949444 3.5845178870213346 -2.8534577910151566 2.1277034065677807 0.35843735587480535 0.332105777738441 2.9407263499409613\n\nНевязки:\n-3.552713678800501e-14 9.592326932761353e-14 4.263256414560601e-13 -2.8421709430404007e-13 -2.2737367544323206e-13 -8.526512829121202e-14 -3.552713678800501e-14 -2.2737367544323206e-13 5.115907697472721e-13 -9.947598300641403e-14 -1.1013412404281553e-13 1.3500311979441904e-13 -1.4210854715202004e-13 1.5631940186722204e-13 -1.4210854715202004e-13 3.157474282033945e-13 6.128431095930864e-14 4.263256414560601e-14 1.2789769243681803e-13 8.526512829121202e-14\n"
+    }
+   ],
+   "source": [
+    "if matrix is not None:\n",
+    "    try:\n",
+    "        transformed_matrix, determinant, decision_vector, residual = solve_by_ghaussian_method(matrix)\n",
+    "        print(\"Определитель: {0}\".format(determinant))\n",
+    "        print()\n",
+    "        print(\"Треугольная матрица:\")\n",
+    "        print(transformed_matrix)\n",
+    "        print()\n",
+    "        print(\"Неизвестные:\")\n",
+    "        print(*decision_vector)\n",
+    "        print()\n",
+    "        print(\"Невязки:\")\n",
+    "        print(*residual)\n",
+    "    except AssertionError as inst:\n",
+    "        print(inst.args[0])"
    ]
   }
  ]
